--- a/next-reggie/src/app/styles/Landing.module.css
+++ b/next-reggie/src/app/styles/Landing.module.css
@@ -23,12 +23,12 @@
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
     width: 100%;
     height: 30%;
-    animation: fadeIn 0.7s ease;
+    animation: fadeIn 0.7s ease-in;
 }
 
 @keyframes fadeIn {
     0% {
-        opacity: 0.1;
+        opacity: 0;
     }
 
     100% {
