--- a/next-reggie/src/app/styles/Landing.module.css
+++ b/next-reggie/src/app/styles/Landing.module.css
@@ -2,7 +2,7 @@
     height: 100svh;
     max-height: 100svh;
     max-width: 100svw;
-    background-image: url('../img/JAM_0165.jpg');
+    background-image: url('../img/JAM_0165a.jpg');
     background-size: cover;
     background-position: top;
     display: flex;
